@@ -86,8 +86,6 @@
 ----------------------------------------------
 	read_colors
   - tested by Pascal Georges <pascal.georges1@free.fr>
-  when pressing <ENTER> many times, gets a buggy emergency
-  car display
 ----------------------------------------------
 	reversecount
 ----------------------------------------------
