@@ -51,6 +51,8 @@ static GnomeCanvasItem *color_item = NULL;
 static GnomeCanvasItem *clock_image_item = NULL;
 static GdkPixbuf *clock_pixmap = NULL;
 
+static gboolean board_finished_running = FALSE;
+
 static GnomeCanvasItem *read_colors_create_item(GnomeCanvasGroup *parent);
 static void read_colors_destroy_all_items(void);
 static void read_colors_next_level(void);
@@ -134,20 +136,21 @@ static void start_board (GcomprisBoard *agcomprisBoard) {
     gcompris_set_background(gnome_canvas_root(gcomprisBoard->canvas), "read_colors/read_colors_background.png");
     gcomprisBoard->level=1;
     gcomprisBoard->maxlevel=1;
+		board_finished_running = FALSE;
     gcompris_bar_set(GCOMPRIS_BAR_OK);
 
     gamewon = FALSE;
     errors = MAX_ERRORS;
 
     init_xml();
-      
+
     // we generate a list of color indexes in a random order
     while (g_list_length(listColors) > 0)
       listColors = g_list_remove(listColors, g_list_nth_data(listColors,0));
-      
+
     for (i=0; i<LAST_COLOR; i++)
       list = g_list_append(list, GINT_TO_POINTER(i));
-      
+
     while ((g_list_length(list) > 0)) {
       i = RAND(0,g_list_length(list)-1);
       item = g_list_nth_data(list, i);
@@ -327,8 +330,11 @@ static void process_ok() {
   if (errors <1)
     errors = 1;
   update_clock();
-	
-  if (errors <= 1) {
+
+  // we have to test the status of board_finished_running to avoid 
+  // multiple occurences
+  if (errors <= 1 && !board_finished_running) {
+  	board_finished_running = TRUE;
     board_finished(BOARD_FINISHED_TOOMANYERRORS);
     return;
   }
