@@ -1,3 +1,9 @@
+2003-02-08  Pascal Georges <pascal.georges1@free.fr>
+	* src/boards/read_colors.c : fixed a bug when the ENTER key is repeatdly
+  pressed : the board_finished(BOARD_FINISHED_TOOMANYERRORS); got called once
+  per key press, making too many pictures to be displayed. This bug may occur in other
+  boards ...
+  
 2003-02-05  Bruno Coudoin  <bruno.coudoin@free.fr>
 
 	* Makefile.am: added po stats (python tool taken from dia)
